# ai-prj

./: langchain_rag.ipynb  main.py  pyproject.toml  requirements.txt
