[project]
name = "ai-prj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "faiss-cpu==1.8.0",
    "ipykernel==6.29.5",
    "jsonpatch==1.33",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-openai==0.1.23",
    "langchain-text-splitters>=0.2.4",
    "openai==1.40.3",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pypdf==4.3.1",
    "python-dotenv==1.0.1",
    "streamlit>=1.55.0",
    "tiktoken==0.7.0",
    "unstructured>=0.21.5",
    "unstructured-inference>=1.1.1",
]
